--- a/_layouts/item/iiif-image.html
+++ b/_layouts/item/iiif-image.html
@@ -1,10 +1,6 @@
 ---
-# basic image item layout
-# Displays image_small if available, with fall back to object_location. 
-# Adds gallery view to open images full screen using object_location, with fall back to image_small.
 layout: item/item-page-base
-gallery: false
 ---
 
-{% include item/iiif-manifest-glycerine.html %}
+{% include item/iiif-manifest-glycerine.html manifest=page.object_location %}
 
