--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -28,89 +28,97 @@ $disabled: #5E6568;
 
 $nav-text-inactive: #ffffff8c;
 $nav-text-hover: #ffffffbf;
-$primary-glow: #f6764f58;
+
+$primary-glow: rgba($primary, 30%);
+$secondary-glow: rgba($secondary, 30%);
+$success-glow: rgba($success, 30%);
+$info-glow: rgba($info, 30%);
+$warning-glow: rgba($warning, 30%);
+$danger-glow: rgba($danger, 30%);
+$light-glow: rgba($light, 30%);
+$dark-glow: rgba($dark, 30%);
 
 /* -------
     Fonts
    ------- */
 
-   .font-boog {
-        font-family: "cheesecake", sans-serif;
-        font-weight: 900;
-        font-style: normal;
-   }
+.font-boog {
+    font-family: "cheesecake", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
 
-   .font-hard {
-        /*
+.font-hard {
+    /*
         font-family: "bebas-neue-by-fontfabric", sans-serif;
         font-weight: 400;
         font-style: normal;
         */
-        font-family: "courier-prime", monospace;
-        font-weight: 400;
-        font-style: italic;
-        text-transform: uppercase;
-   }
+    font-family: "courier-prime", monospace;
+    font-weight: 400;
+    font-style: italic;
+    text-transform: uppercase;
+}
 
-   .font-inhe {
-        font-family: "acier-bat-outline", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-   }
+.font-inhe {
+    font-family: "acier-bat-outline", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
-   .font-lico {
-        font-family: "lint-mccree", sans-serif;
-        font-weight: 700;
-        font-style: italic;
-   }
+.font-lico {
+    font-family: "lint-mccree", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+}
 
-   .font-magn {
-        font-family: "bembo-book-mt-pro", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-        text-transform: lowercase;
-   }
+.font-magn {
+    font-family: "bembo-book-mt-pro", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    text-transform: lowercase;
+}
 
-   .font-mast {
-        font-family: "berthold-baskerville-pro", serif;
-        font-weight: 400;
-        font-style: normal;
-   }
+.font-mast {
+    font-family: "berthold-baskerville-pro", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
-   .font-obaa {
-        font-family: "octin-college", sans-serif;
-        font-weight: 900;
-        font-style: normal;
-   }
+.font-obaa {
+    font-family: "octin-college", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
 
-   .font-phan {
-        font-family: "castoro-titling", serif;
-        font-weight: 400;
-        font-style: normal;
-   }
+.font-phan {
+    font-family: "castoro-titling", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
-   .font-punc {
-        font-family: "amatic-sc", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-   }
+.font-punc {
+    font-family: "amatic-sc", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
 
-   .font-twbb {
-        font-family: "sabbath-black", serif;
-        font-weight: 400;
-        font-style: normal;
-   }
+.font-twbb {
+    font-family: "sabbath-black", serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 /* Accessibility Utility */
-    .visually-hidden {
-        clip: rect(0 0 0 0);
-        clip-path: inset(50%);
-        height: 1px;
-        overflow: hidden;
-        position: absolute;
-        white-space: nowrap;
-        width: 1px;
-    }
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
 
 /* --------------------------------
     General Overrides and Utilities
@@ -141,31 +149,12 @@ a:hover svg {
 .card {
     background-color: $dark;
     color: #F8F9FA;
-    border: none;
+    border: 1px solid $dark-border;
 }
 
 .item {
     transition: all 0.3s ease-in-out;
     position: relative;
-
-    .card-text-container {
-        position: absolute;
-        margin: 0;
-        // top: 50%;
-        // left: 50%;
-        bottom: .5rem;
-        width: 100%;
-        // padding: 0.5rem 0;
-        // background-color: #00000093;
-        // -ms-transform: translate(-50%, -50%);
-        // transform: translate(-50%, -50%);
-        display: none;
-
-        .card-title, .card-text {
-            color: $light !important;
-            text-shadow: 2px 2px 2px #000000;
-        }
-    }
 }
 
 .item:hover {
@@ -234,6 +223,10 @@ a:hover svg {
     padding-right: 1.5rem;
 }
 
+.navbar-nav .nav-item .nav-link.active {
+    color: $light;
+}
+
 .navbar .dropdown-menu {
     background-color: $dark;
     border: 1px solid $dark-border;
@@ -241,7 +234,7 @@ a:hover svg {
 }
 
 .nav-item {
-     &:focus {
+    &:focus {
         border: none;
     }
 }
@@ -249,7 +242,7 @@ a:hover svg {
 .navbar .dropdown-menu .dropdown-item {
     color: $nav-text-inactive;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
-    
+
     &.active {
         color: $light;
         background-color: $secondary;
@@ -419,7 +412,8 @@ a:hover svg {
             /* transition: all .25s ease-in-out; */
         }
 
-        &:hover, &:focus {
+        &:hover,
+        &:focus {
             background-color: #f6754f;
 
             img {
@@ -465,7 +459,7 @@ a:hover svg {
 
 .browse-sort-item {
     color: $light;
-    
+
     &:hover {
         background-color: $primary-glow;
         color: $light;
@@ -506,6 +500,144 @@ a:hover svg {
     position: relative;
     top: -2px;
     font-weight: 700;
+}
+
+/* ---------------------------
+    Glycerine Style Overrides
+   --------------------------- */
+
+/* border for annotation dialog */
+.p-dialog.p-component {
+    border: 1px solid $dark-border;
+}
+
+/* recolor annotation dialog and panel to match site theme */
+.p-dialog .p-dialog-header,
+.p-dialog .p-dialog-content,
+.p-dialog .p-dialog-footer,
+.p-datatable .p-datatable-thead>tr>th,
+.p-datatable .p-datatable-tbody>tr,
+.p-datatable .p-datatable-tbody>tr>td,
+.p-paginator {
+    background: $dark;
+    color: $light;
+    border-color: $dark-border;
+}
+
+.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+    background: $secondary;
+    color: $light;
+    border-color: $dark-border;
+}
+
+.p-paginator .p-paginator-first,
+.p-paginator .p-paginator-prev,
+.p-paginator .p-paginator-next,
+.p-paginator .p-paginator-last {
+    background-color: $secondary;
+}
+
+.p-tabview-title {
+    color: $light;
+}
+
+.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+    background: $secondary;
+    border-color: $primary;
+    color: $light;
+}
+
+/* style buttons to match site theme */
+.p-button {
+    color: $dark;
+    background: $primary;
+    border: 1px solid $primary;
+
+    &:enabled:hover {
+        color: $dark;
+        background: $light;
+        border: 1px solid $light;
+    }
+
+    &:focus {
+        box-shadow: 0 0 0 2px #fff, 0 0 0 4px $primary-glow, 0 1px 2px #000
+    }
+
+    &.p-button-outlined {
+        color: $primary;
+        border: 1px solid $primary;
+
+        &:enabled:hover {
+            color: $dark;
+            background-color: $primary;
+            border: 1px solid $primary;
+        }
+    }
+}
+
+.p-dialog .p-dialog-header .p-dialog-header-icon {
+    filter: invert(100%);
+
+    &:hover {
+        background: $light;
+        filter: invert(0%);
+    }
+
+    &:focus {
+        outline: 0 none;
+        outline-offset: 0;
+        box-shadow: 0 0 0 .2rem $light-glow;
+        background: $light;
+        filter: invert(0%);
+    }
+}
+
+/* hide tabview nav */
+.p-tabview .p-tabview-nav {
+    display: none;
+}
+
+/* give dialog and panel elements rounded corners */
+.p-datatable-wrapper {
+    border-radius: .25rem;
+}
+
+.p-paginator {
+    border-radius: 0 0 .25rem .25rem;
+}
+
+.p-datatable .p-datatable-thead {
+    border-radius: .25rem .25rem 0 0;
+}
+
+/* hide second "Close" button on annotation dialog */
+.p-dialog .p-dialog-footer button {
+    margin: .5rem .5rem 0 0;
+    display: none;
+}
+
+/* hide dialog title and footer */
+.p-dialog-title,
+.p-dialog-footer {
+    display: none;
+}
+
+/* adjust tabview panel */
+.p-tabview .p-tabview-panels {
+    padding: 0;
+    background: $dark;
+    color: $light;
+}
+
+/* adjust padding of dialog elements and move close button to upper right corner */
+.p-dialog .p-dialog-header {
+    padding: .5rem;
+    justify-content: flex-end;
+}
+
+.p-dialog .p-dialog-content {
+    padding: 0 1rem;
+    border-radius: 0 0 6px 6px;
 }
 
 /* ------------------------------
@@ -553,25 +685,67 @@ a:hover svg {
     margin-bottom: 1rem;
 }
 
-.tagcloud1, .tagcloud2, .tagcloud3, .tagcloud4, .tagcloud5,
-.tagcloud6, .tagcloud7, .tagcloud8, .tagcloud9, .tagcloud10 {
+.tagcloud1,
+.tagcloud2,
+.tagcloud3,
+.tagcloud4,
+.tagcloud5,
+.tagcloud6,
+.tagcloud7,
+.tagcloud8,
+.tagcloud9,
+.tagcloud10 {
     transition: all .2s ease-in-out;
-    &:hover, &:focus {
+
+    &:hover,
+    &:focus {
         transform: scale(1.1);
     }
 }
 
 /* scale down tagcloud buttons on smaller screens to prevent overflow */
 @media only screen and (max-width: 576px) {
-    .tagcloud0{font-size:0.4em;}
-    .tagcloud1{font-size:0.5em;}
-    .tagcloud2{font-size:0.6em;}
-    .tagcloud3{font-size:0.8em;}
-    .tagcloud4{font-size:1.0em;}
-    .tagcloud5{font-size:1.2em;}
-    .tagcloud6{font-size:1.4em;}
-    .tagcloud7{font-size:1.6em;}
-    .tagcloud8{font-size:1.8em;}
-    .tagcloud9{font-size:2.0em;}
-    .tagcloud10{font-size:2.2em;}
+    .tagcloud0 {
+        font-size: 0.4em;
+    }
+
+    .tagcloud1 {
+        font-size: 0.5em;
+    }
+
+    .tagcloud2 {
+        font-size: 0.6em;
+    }
+
+    .tagcloud3 {
+        font-size: 0.8em;
+    }
+
+    .tagcloud4 {
+        font-size: 1.0em;
+    }
+
+    .tagcloud5 {
+        font-size: 1.2em;
+    }
+
+    .tagcloud6 {
+        font-size: 1.4em;
+    }
+
+    .tagcloud7 {
+        font-size: 1.6em;
+    }
+
+    .tagcloud8 {
+        font-size: 1.8em;
+    }
+
+    .tagcloud9 {
+        font-size: 2.0em;
+    }
+
+    .tagcloud10 {
+        font-size: 2.2em;
+    }
 }
