--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -67,7 +67,7 @@ function makeCard(obj) {
     }
     
     // Title
-    card += `<div class="card-body text-center"><h3 class="card-title h4"><a href="${itemHref}" class="text-light">${obj.title}</a></h3>`;
+    card += `<div class="card-body text-center"><h3 class="card-title h4"><a href="${itemHref}">${obj.title}</a></h3>`;
     
     // Icon for items without images
     if(!obj.img) {
