--- a/_layouts/film.html
+++ b/_layouts/film.html
@@ -18,7 +18,7 @@ layout: default
 <div class="row justify-content-center text-center mb-4">
     <div class="col-10 col-md-8">
         <div class="essay-page-narrow">
-            <a class="btn mx-2 mb-2 btn-lg btn-primary" href="{{ '/browse.html' | relative_url }}#{{ page.title }}">Browse screenshots</a>
+            <a class="btn mx-2 mb-2 btn-lg btn-primary" href="{{ '/browse.html' | relative_url }}?b0=AND&f0=film&v0={{ page.title | replace: ' ', '+' }}&b1=AND&f1=type&v1=Screenshot&sort=film">Browse screenshots</a>
             <a class="btn mx-2 mb-2 btn-lg btn-primary" href="{{ '/essays.html' | relative_url }}#{{ page.title | slugify }}">See related essays</a>
         </div>
     </div>
