--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -159,10 +159,7 @@ a:hover svg {
 
 .item:hover {
     transform: scale(1.1);
-
-    .card-text-container {
-        display: block;
-    }
+    z-index: 1;
 }
 
 .pagination {
