--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -637,6 +637,19 @@ a:hover svg {
     border-radius: 0 0 6px 6px;
 }
 
+/* adjust color and stroke width of annotation rectangle outlines */
+
+.a9s-annotation .a9s-inner, 
+.a9s-selection .a9s-inner {
+    stroke: $info !important;
+    stroke-width: 2px !important;
+}
+
+.a9s-annotation .a9s-inner:hover, 
+.a9s-selection .a9s-inner:hover {
+    stroke: $warning !important;
+}
+
 /* ------------------------------
     Responsive IIIF iframe Container
    ------------------------------ */
