--- a/_includes/index/animated-gallery.html
+++ b/_includes/index/animated-gallery.html
@@ -15,7 +15,7 @@
         </div>
         {%- endfor -%}
     </div>
-    <button id="gallery-animation-control" class="btn btn-secondary m-1 playing" data-action="stop" onclick="toggleAnimation('gallery-animation-control')"><span class="visually-hidden">Stop Animation </span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Pro v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc.--><path fill="#F9F6EE" d="M176 96C149.5 96 128 117.5 128 144L128 496C128 522.5 149.5 544 176 544L240 544C266.5 544 288 522.5 288 496L288 144C288 117.5 266.5 96 240 96L176 96zM400 96C373.5 96 352 117.5 352 144L352 496C352 522.5 373.5 544 400 544L464 544C490.5 544 512 522.5 512 496L512 144C512 117.5 490.5 96 464 96L400 96z"/></svg></button>
+    <button id="gallery-animation-control" class="btn btn-secondary m-1 playing" data-action="stop" onclick="toggleAnimation('gallery-animation-control')"><span class="visually-hidden">Stop Animation </span><svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/pause-fill.svg' | relative_url }}"/></svg></button>
 </div>
 <style>
     .gallery-container {
@@ -30,10 +30,6 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        
-        svg {
-            vertical-align: -1px;
-        }
     }
 
     #animated-gallery {
@@ -107,7 +103,7 @@
             clearInterval(flipInterval);
             // update data-action and inner HTML of button
             toggle.setAttribute('data-action', 'start');
-            toggle.innerHTML = '<span class="visually-hidden">Start Animation </span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#F9F6EE" d="M187.2 100.9C174.8 94.1 159.8 94.4 147.6 101.6C135.4 108.8 128 121.9 128 136L128 504C128 518.1 135.5 531.2 147.6 538.4C159.7 545.6 174.8 545.9 187.2 539.1L523.2 355.1C536 348.1 544 334.6 544 320C544 305.4 536 291.9 523.2 284.9L187.2 100.9z"/></svg>';
+            toggle.innerHTML = '<span class="visually-hidden">Start Animation </span><svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/play-fill.svg' | relative_url }}"/></svg>';
         } else {
             // set flip interval to 3000 to start animation
             flipInterval = window.setInterval(function(){
@@ -115,7 +111,7 @@
             }, 3000);
             // update data-action and inner HTML of button
             toggle.setAttribute('data-action', 'stop');
-            toggle.innerHTML = '<span class="visually-hidden">Stop Animation </span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Pro v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc.--><path fill="#F9F6EE" d="M176 96C149.5 96 128 117.5 128 144L128 496C128 522.5 149.5 544 176 544L240 544C266.5 544 288 522.5 288 496L288 144C288 117.5 266.5 96 240 96L176 96zM400 96C373.5 96 352 117.5 352 144L352 496C352 522.5 373.5 544 400 544L464 544C490.5 544 512 522.5 512 496L512 144C512 117.5 490.5 96 464 96L400 96z"/></svg>';
+            toggle.innerHTML = '<span class="visually-hidden">Stop Animation </span><svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/pause-fill.svg' | relative_url }}"/></svg>';
         }
         toggle.classList.toggle("playing");
     }
