--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -23,7 +23,7 @@ custom-foot: js/browse-js.html
                     {% assign cap-field = f.field | capitalize %}
                     <option value="{{ f.field }}">{{ f.facet_name | default: f.display_name | default: cap-field }}</option>
                     {% endfor %}
-                    <option value="display_template">Content Type</option>
+                    <!--<option value="display_template">Content Type</option>-->
                     {% if site.data.theme.advanced-search == true %}
                     <option value="" disabled>─────────────</option>
                     <option value="advanced">Advanced Search...</option>{% endif %}
@@ -38,12 +38,12 @@ custom-foot: js/browse-js.html
                     </button>
                     <div class="dropdown-menu">
                         <button class="dropdown-item" type="button" data-field="all">All Fields</button>
-                        <button class="dropdown-item" type="button" data-field="title">Title</button>
+                        <!--<button class="dropdown-item" type="button" data-field="title">Title</button>-->
                         {% for f in fields %}
                         {% assign cap-field = f.field | capitalize %}
                         <button class="dropdown-item" type="button" data-field="{{ f.field }}">{{ f.facet_name | default: f.display_name | default: cap-field }}</button>
                         {% endfor %}
-                        <button class="dropdown-item" type="button" data-field="display_template">Content Type</button>
+                        <!--<button class="dropdown-item" type="button" data-field="display_template">Content Type</button>-->
                         {% if site.data.theme.advanced-search == true %}
                         <div class="dropdown-divider"></div>
                         <button class="dropdown-item" type="button" data-field="advanced">Advanced Search...</button>
@@ -95,9 +95,19 @@ custom-foot: js/browse-js.html
                 <ul class="facet-values dropdown-menu p-2">
                     {% assign values = facet.values | split: "|" %}
                     {% for value in values %}
-                    <li class="form-check">
-                        <input class="facet-checkbox form-check-input" type="checkbox" id="{{ value | slugify }}" name="{{ value | slugify}}" value="{{ facet.name }}-{{ value | slugify }}">
-                        <label class="form-check-label" for="{{ value | slugify }}">{{ value }}</label>
+                    <li class="mb-1">
+                        <div id="{{ facet.name | slugify }}-{{ value | slugify }}">
+                            <div class="d-inline">
+                                <select id="{{ facet.name | slugify }}-{{ value | slugify }}-boolean" class="form-select form-select-sm boolean-operator d-inline">
+                                    <option value="AND">AND</option>
+                                    <option value="OR">OR</option>
+                                    <option value="NOT">NOT</option>
+                                </select>
+                            </div>
+                            <div class="d-inline">
+                                <button class="btn btn-sm btn-outline-light" onClick="addQuery('{{ facet.name }}', '{{ value }}');">{{ value }} +</button>
+                            </div>
+                        </div>
                     </li>
                     {% endfor %}
                 </ul>
@@ -106,10 +116,6 @@ custom-foot: js/browse-js.html
         </ul>
     </div>
     <div class="col-12 col-lg-4 mb-1 text-end">
-        <div class="btn-group mb-1" role="group" aria-label="Apply and Remove Filters">
-            <button class="btn btn-success mx-0" type="button" onclick="applyFilters()">Apply Filters</button>
-            <button class="btn btn-danger mx-0" type="button" onclick="removeFilters(); filterItems(items,query);">Remove Filters</button>
-        </div>
         <div class="dropdown">
             <button class="btn btn-warning mt-1 dropdown-toggle" type="button" id="browseSortButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Sort by <span id="sortFilter">Random</span>
@@ -133,3 +139,42 @@ custom-foot: js/browse-js.html
 </div>
 
 <div class="row" id="browseItems"></div>
+
+<script>
+    // function to update url with more search terms
+    function addQuery(field, value){ 
+        // get page url
+        let currentUrl = window.location.href;
+        let fixedUrl = currentUrl.replace('http://127.0.0.1:4000/', '');
+        // get string that needs to be appended to url based on button clicked 
+        // find what the number of the new query should be
+        for (let i = 0; i < 99; i++) {
+            if (fixedUrl.includes(i.toString())) {
+                continue;
+            } else {
+                var queryNum = i.toString();
+                break;
+            }
+        }
+        // check if this is the first query
+        let stringStart = '';
+        if (queryNum == '0'){
+            stringStart = '?';
+        } else {
+            stringStart = '&';
+        }
+        // get the parts of the query string
+        let boolId = field.toLowerCase().replaceAll(' ', '-') + '-' + value.toLowerCase().replaceAll(' ', '-') + '-boolean';
+        console.log(boolId);
+        let boolValue = document.getElementById(boolId).value;
+        let boolString = 'b' + queryNum + '=' + boolValue;
+        let fieldString = 'f' + queryNum + '=' + field;
+        let valueString = 'v' + queryNum + '=' + value;
+        let newQuery =  stringStart + boolString + '&' + fieldString + '&' + valueString.replaceAll(' ','+');
+        // append the query string to the url
+        let newUrl = currentUrl + newQuery;
+        // fix double ??, in case the original url had a ? at the end already
+        newUrl = newUrl.replace('??', '?');
+        window.location.href = newUrl;
+    }
+</script>
