--- a/_includes/advanced-search-modal.html
+++ b/_includes/advanced-search-modal.html
@@ -52,7 +52,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="col-10 col-md-6">
+            <div class="input-type col-10 col-md-6">
                 <input type="text" class="form-control form-control-sm search-input" placeholder="Enter search term">
             </div>
             <div class="col-2 col-md-1">
