--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -1058,5 +1058,47 @@ function setupEventHandlers() {
         });
     }
 }
+
+// =============================================================================
+// CUSTOM PTA FEATURES
+// =============================================================================
+
+// function to support buttons in Filters menu
+    function addQuery(field, value){ 
+        // get page url
+        let currentUrl = window.location.href;
+        let fixedUrl = currentUrl.replace('http://127.0.0.1:4000/', '');
+        // get string that needs to be appended to url based on button clicked 
+        // find what the number of the new query should be
+        for (let i = 0; i < 99; i++) {
+            if (fixedUrl.includes(i.toString())) {
+                continue;
+            } else {
+                var queryNum = i.toString();
+                break;
+            }
+        }
+        // check if this is the first query
+        let stringStart = '';
+        if (queryNum == '0'){
+            stringStart = '?';
+        } else {
+            stringStart = '&';
+        }
+        // get the value of the boolean operator for this query
+        let boolId = field.toLowerCase().replaceAll(' ', '-') + '-' + value.toLowerCase().replaceAll(' ', '-') + '-boolean';
+        console.log(boolId);
+        let boolValue = document.getElementById(boolId).value;
+        // assemble the parts of the query string
+        let boolString = 'b' + queryNum + '=' + boolValue;
+        let fieldString = 'f' + queryNum + '=' + field;
+        let valueString = 'v' + queryNum + '=' + value;
+        let newQuery =  stringStart + boolString + '&' + fieldString + '&' + valueString.replaceAll(' ','+');
+        // append the query string to the url
+        let newUrl = currentUrl + newQuery;
+        // fix double ??, in case the original url had a ? at the end already
+        newUrl = newUrl.replace('??', '?');
+        window.location.href = newUrl;
+    }
 </script>
 {% endunless %}
