update appearance of new browse functionality

--- a/_includes/advanced-search-modal.html
+++ b/_includes/advanced-search-modal.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#advancedSearchModal">
+<button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#advancedSearchModal">
   Advanced<span class="d-none d-md-inline"> Search</span>
 </button>
 <div class="modal fade" id="advancedSearchModal" tabindex="-1">
