adjust modal styles

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -12,7 +12,7 @@ custom-foot: js/lunr-js.html
         <div class="modal-content bg-dark">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Lunr Search Options</h5>
-                <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-light" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>These advanced options can be added to your query in the search box to refine your results:</p> 
