--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -196,6 +196,10 @@ a:hover svg {
     opacity: .15;
 }
 
+.modal-dialog {
+    border: 1px solid $dark-border;
+}
+
 /* --------
     Header
    -------- */
