add progress notes to film and home pages and

--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -15,4 +15,8 @@
     <div>
         <p>{{ site.description }} <a href="{{ '/about.html' | relative_url }}">Learn More <svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/arrow-right.svg' | relative_url }}"/></svg></a></p>
     </div>
+    <div class="alert alert-primary text-center" role="alert">
+      Progress Note: <em>Punch-Drunk Love</em> is fully annotated. Screenshots and metadata are
+      available for <em>Licorice Pizza</em>, <em>Phantom Thread</em>, and <em>Punch-Drunk Love</em>.
+    </div>
 </div>
