--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -201,32 +201,32 @@ a:hover svg {
 }
 
 .alert-primary {
-    color: $primary;
-    background-color: $primary-glow;
+    color: $light;
+    background-color: $dark;
     border-color: $primary;
 }
 
 .alert-success {
-    color: $success;
-    background-color: $success-glow;
+    color: $light;
+    background-color: $dark;
     border-color: $success;
 }
 
 .alert-info {
-    color: $info;
-    background-color: $info-glow;
+    color: $light;
+    background-color: $dark;
     border-color: $info;
 }
 
 .alert-warning {
-    color: $warning;
-    background-color: $warning-glow;
+    color: $light;
+    background-color: $dark;
     border-color: $warning;
 }
 
 .alert-danger {
-    color: $danger;
-    background-color: $danger-glow;
+    color: $light;
+    background-color: $dark;
     border-color: $danger;
 }
 
