--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -1067,37 +1067,61 @@ function setupEventHandlers() {
     function addQuery(field, value){ 
         // get page url
         let currentUrl = window.location.href;
-        let fixedUrl = currentUrl.replace('http://127.0.0.1:4000/', '');
-        // get string that needs to be appended to url based on button clicked 
-        // find what the number of the new query should be
+        let startQuery = currentUrl.replace('{{ site.url | append: site.baseurl | append: page.url }}', '').replace('http://127.0.0.1:4000/pt-annotated/browse.html', '');
+        // check if a filter with this value has already been applied and remove it
+        if (startQuery.includes(value.replaceAll(' ','+'))) {
+            // search current url for full query string
+            let pattern = new RegExp(String.raw`\Wb\d?=\w{2,3}\Wf\d?=${field.replaceAll(' ','\\+')}\Wv\d?=${value.replaceAll(' ','\\+')}`);
+            console.log(pattern);
+            let oldQuery = startQuery.match(pattern)[0];
+            // remove old query from the url
+            startQuery = startQuery.replace(oldQuery, '');
+            // fix numbers on other queries
+            let deletedQueryNum = oldQuery.match(/\d/)[0];
+            for (let i = deletedQueryNum; i < 99; i++) {
+                if (startQuery.includes(i.toString())) {
+                    let newNum = i - 1;
+                    startQuery = startQuery.replaceAll(i.toString(), newNum.toString());
+                } else {
+                    break;
+                }
+            }
+        }
+        // find what the number of the new filter should be
         for (let i = 0; i < 99; i++) {
-            if (fixedUrl.includes(i.toString())) {
+            if (startQuery.includes(i.toString())) {
                 continue;
             } else {
-                var queryNum = i.toString();
+                var filterNum = i.toString();
                 break;
             }
         }
-        // check if this is the first query
+        // if this is the first filter, start with ?; if not, start with &
         let stringStart = '';
-        if (queryNum == '0'){
+        if (filterNum == '0'){
             stringStart = '?';
         } else {
             stringStart = '&';
         }
-        // get the value of the boolean operator for this query
+        // get the value of the boolean operator for this filter
         let boolId = field.toLowerCase().replaceAll(' ', '-') + '-' + value.toLowerCase().replaceAll(' ', '-') + '-boolean';
-        console.log(boolId);
+        // console.log(boolId);
         let boolValue = document.getElementById(boolId).value;
-        // assemble the parts of the query string
-        let boolString = 'b' + queryNum + '=' + boolValue;
-        let fieldString = 'f' + queryNum + '=' + field;
-        let valueString = 'v' + queryNum + '=' + value;
-        let newQuery =  stringStart + boolString + '&' + fieldString + '&' + valueString.replaceAll(' ','+');
-        // append the query string to the url
-        let newUrl = currentUrl + newQuery;
-        // fix double ??, in case the original url had a ? at the end already
-        newUrl = newUrl.replace('??', '?');
+        // assemble the parts of the filter string
+        let boolString = 'b' + filterNum + '=' + boolValue;
+        let fieldString = 'f' + filterNum + '=' + field;
+        let valueString = 'v' + filterNum + '=' + value;
+        let newFilter =  stringStart + boolString + '&' + fieldString + '&' + valueString.replaceAll(' ','+');
+        // append the filter string to the query
+        let newQuery = startQuery + newFilter;
+        // ensure first character of whole query is ? not &
+        if (newQuery[0] == '&') {
+            newQuery = newQuery.replace('&', '?');
+        }
+        // fix double ?? at start of query
+        newQuery = newQuery.replace('??', '?');
+        var newUrl = '{{ site.url | append: site.baseurl | append: page.url }}' + newQuery;
+        console.log(newUrl);
         window.location.href = newUrl;
     }
 </script>
