add contact and bibliography link in footer

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -290,6 +290,14 @@ a:hover svg {
     }
 }
 
+.footer-nav {
+    font-size: 1rem;
+
+    .nav-link {
+        padding: 0 0 .5rem 0;
+    }
+}
+
 /* -------------------
     Homepage Elements
    ------------------- */
