--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,22 @@
 <footer class="pt-3 container">
 
     <div class="row pb-3 mb-2">
-
-        <div class="col-12 mt-3 text-center text-md-end">
+        <div class="col-md-8 mt-3">
+            <nav>
+                <ul class="list-group list-group-horizontal justify-content-center justify-content-md-start">
+                    <li class="list-group-item bg-dark text-start ps-md-0 pe-md-4">
+                        <a href="{{ '/about.html' | relative_url }}">About</a>
+                    </li>
+                    <li class="list-group-item bg-dark text-start ps-md-0 pe-md-4">
+                        <a target="_blank" href="https://www.zotero.org/groups/5918526/paul_thomas_annotated/library">Bibliography</a>
+                    </li>
+                    <li class="list-group-item bg-dark text-start ps-md-0 pe-md-4">
+                        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdEWojQpxRp1vWhzNjGnI-mGC8bGztAyWR1wsA27lcoSvZe3Q/viewform?usp=sharing&ouid=105265580496044254580">Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-md-4 mt-3 text-center text-md-end">
             <p class="text-light" id="footer-credits">
                 <!--<small>Last updated {{ site.time | date: '%Y' }}.</small>-->
                 <small><em>Built with</em>
