add contact and bibliography links to about page, adjust external links

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -230,6 +230,10 @@ a:hover svg {
     border-color: $danger;
 }
 
+.border-secondary {
+    border-color: $dark-border !important;
+}
+
 /* --------
     Header
    -------- */
