add beta version note and adjust links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,10 @@
                         <a href="{{ '/about.html' | relative_url }}">About</a>
                     </li>
                     <li class="list-group-item bg-dark text-start ps-md-0 pe-md-4">
-                        <a href="https://www.zotero.org/groups/5918526/paul_thomas_annotated/library" target="_blank" rel="noopener">Bibliography <svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/box-arrow-up-right.svg' | relative_url }}"/></svg><span class="visually-hidden">(opens in a new tab)</span></a>
+                        <a href="https://www.zotero.org/groups/5918526/paul_thomas_annotated/library" target="_blank">Bibliography</a>
                     </li>
                     <li class="list-group-item bg-dark text-start ps-md-0 pe-md-4">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEWojQpxRp1vWhzNjGnI-mGC8bGztAyWR1wsA27lcoSvZe3Q/viewform?usp=sharing&ouid=105265580496044254580" target="_blank" rel="noopener">Contact Us <svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/box-arrow-up-right.svg' | relative_url }}"/></svg><span class="visually-hidden">(opens in a new tab)</span></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEWojQpxRp1vWhzNjGnI-mGC8bGztAyWR1wsA27lcoSvZe3Q/viewform?usp=sharing&ouid=105265580496044254580" target="_blank">Contact Us</a>
                     </li>
                 </ul>
             </nav>
