--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -13,7 +13,7 @@
 {%- endcomment -%}
 <div class="mt-4 mb-5">
     <div>
-        <p>{{ site.description }} <a href="{{ '/about.html' | relative_url }}">Learn More <svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/arrow-right.svg' | relative_url }}"/></svg></a></p>
+        <p><em>Paul Thomas Annotated: In the Margins is an open access resource devoted to the filmography of Paul Thomas Anderson. Our project involves annotating, scene by scene, screenshots from each of his ten narrative films to date. <a href="{{ '/about.html' | relative_url }}">Learn More <svg class="bi icon-sprite" aria-hidden="true"><use xlink:href="{{ '/assets/lib/icons/arrow-right.svg' | relative_url }}"/></svg></a></p>
     </div>
     <div class="alert alert-primary text-center" role="alert">
       Progress Note: <em>Punch-Drunk Love</em> is fully annotated. Screenshots and metadata are
