--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -8,7 +8,7 @@ layout: page
 
     <div id="home-title"><h2 class="visually-hidden">{{ site.title }}</h2><img src="{{ '/assets/img/pta-logo-bone.svg' | relative_url }}" alt="" class="full-logo"><img src="{{ '/assets/img/pta-logo-narrow-bone.svg' | relative_url }}" alt="" class="narrow-logo"></div>
 
-    {% include index/description.html %}
+    {{ content }}
 
     {% include index/films.html %}
     
