adjust annona icon alignment

--- a/_includes/item/iiif-manifest-annona.html
+++ b/_includes/item/iiif-manifest-annona.html
@@ -15,6 +15,7 @@
         "hide_autorunbutton": true,
         "hide_annocontrols": false, 
         "hide_infobutton": true,
+        "hide_nextbuttons": false,
         "fit": "horizontal", 
         "panorzoom": "zoom", 
         "toggleoverlay": true
@@ -59,10 +60,10 @@
         background-color: #000000;
     }
 
+    
     .toolbarButton .fas,
     .toolbarButton .fa {
-        position: relative;
-        top: -3px;
+        vertical-align: text-top;
     }
 
     #annotation_controls {
