--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -63,7 +63,7 @@ $dark-glow: rgba($dark, 30%);
 .font-inhe {
     font-family: "acier-bat-outline", sans-serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: italic;
 }
 
 .font-lico {
